// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YourProfileView _handleSubmit should submit user data 1`] = `
[
  [
    {
      "bio": "CTO",
      "email": "alex@gorgias.io",
      "name": "Alex Plugaru",
      "timezone": "EST",
    },
  ],
]
`;

exports[`YourProfileView _handleSubmit should submit user data and reset the password confirmation field because the email field was marked as changed 1`] = `
[
  [
    {
      "bio": "CTO",
      "email": "alex@gorgias.ioq",
      "name": "Alex Plugaru",
      "password_confirmation": "a-password",
      "timezone": "EST",
    },
  ],
]
`;

exports[`YourProfileView _saveProfilePicture should remove profile picture 1`] = `
[
  [
    {
      "meta": {
        "profile_picture_url": null,
      },
    },
  ],
]
`;

exports[`YourProfileView _saveProfilePicture should save profile picture 1`] = `
[
  [
    {
      "bio": "CTO",
      "email": "alex@gorgias.io",
      "name": "Alex Plugaru",
      "timezone": "EST",
    },
  ],
]
`;

exports[`YourProfileView render should expand to show the phone number field when enabling call forwarding 1`] = `
<span
  class="ml-2 dropdown-toggle"
>
  +
  1
</span>
`;

exports[`YourProfileView render should render current user profile form 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Your profile
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="headingSection"
    >
      Personal information
    </div>
    <form
      class=""
    >
      <div
        class="flex flex-wrap"
      >
        <div
          class="leftSideWrapper"
        >
          <div
            class="section"
          >
            <div
              class="inputField"
            >
              <label
                class="label label"
                for="input-text-1"
              >
                Your name
                <abbr
                  aria-label="required"
                  class="abbr"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper"
              >
                <input
                  class="input"
                  id="input-text-1"
                  name="name"
                  placeholder="John Doe"
                  required=""
                  type="text"
                  value="Alex Plugaru"
                />
              </div>
            </div>
            <div
              class="inputField"
            >
              <label
                class="label label"
                for="input-text-3"
              >
                Your email
                <abbr
                  aria-label="required"
                  class="abbr"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper"
              >
                <input
                  class="input"
                  id="input-text-3"
                  name="email"
                  placeholder="john.doe@acme.com"
                  required=""
                  type="email"
                  value="alex@gorgias.io"
                />
              </div>
            </div>
            <div
              class="inputField"
            >
              <label
                class="label label"
                for="input-text-5"
              >
                Your bio
              </label>
              <div
                class="wrapper"
              >
                <input
                  aria-describedby="input-text-5-caption"
                  class="input"
                  id="input-text-5"
                  name="bio"
                  type="text"
                  value="CTO"
                />
              </div>
              <div
                class="caption"
                id="input-text-5-caption"
              >
                <span>
                  Your bio can be used in signatures as a variable. Admins can set up signatures
                   
                  <a
                    to="/app/settings/channels/email"
                  >
                    in each email integration
                  </a>
                </span>
              </div>
            </div>
          </div>
          <div
            class="headingSection"
          >
            Date and time settings
          </div>
          <div
            class="section"
          >
            <div
              class="inputField form-group"
            >
              <label
                class="control-label"
              >
                Timezone
              </label>
              <div>
                <div
                  class="dropdown"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class=""
                    data-toggle="dropdown"
                  >
                    <div
                      class="select dropdown-toggle selectFullWidth"
                    >
                      <span
                        class="label placeholder"
                        style="min-width: 10px; opacity: 1;"
                      >
                        Select an option
                      </span>
                      <input
                        autocomplete="chrome-off"
                        class="input"
                        style="min-width: 10px;"
                        type="text"
                        value=""
                      />
                      <i
                        class="material-icons dropdownIcon"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                  <div
                    aria-hidden="true"
                    class="options optionsFullWidth dropdown-menu"
                    role="menu"
                    tabindex="-1"
                  >
                    <h6
                      class="dropdown-header"
                      tabindex="-1"
                    >
                      No result
                    </h6>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="dateAndTimeFormattingSettingsWrapper"
            >
              <fieldset
                class="settingWrapper"
                name="radio-field-7"
              >
                <legend
                  class="legend"
                >
                  Date format
                </legend>
                <div
                  class="option"
                >
                  <label
                    class="label label"
                    for="en_GB"
                  >
                    <input
                      class="input"
                      id="en_GB"
                      name="radio-field-7"
                      type="radio"
                    />
                    Day/Month/Year
                  </label>
                  <div
                    class="caption caption"
                  >
                    Example: 1 Jan, 2024
                  </div>
                </div>
                <div
                  class="option"
                >
                  <label
                    class="label label"
                    for="en_US"
                  >
                    <input
                      class="input"
                      id="en_US"
                      name="radio-field-7"
                      type="radio"
                    />
                    Month/Day/Year
                  </label>
                  <div
                    class="caption caption"
                  >
                    Example: Jan 1, 2024
                  </div>
                </div>
              </fieldset>
              <fieldset
                class="settingWrapper"
                name="radio-field-8"
              >
                <legend
                  class="legend"
                >
                  Time format
                </legend>
                <div
                  class="option"
                >
                  <label
                    class="label label"
                    for="24-hour"
                  >
                    <input
                      class="input"
                      id="24-hour"
                      name="radio-field-8"
                      type="radio"
                    />
                    24-hour
                  </label>
                </div>
                <div
                  class="option"
                >
                  <label
                    class="label label"
                    for="AM/PM"
                  >
                    <input
                      class="input"
                      id="AM/PM"
                      name="radio-field-8"
                      type="radio"
                    />
                    AM/PM
                  </label>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="profilePicture inputField form-group"
        >
          <label
            class="control-label"
          >
            Profile picture
          </label>
          <div
            class="component hasImage square mb16"
            style="width: 100px; height: 100px;"
          >
            <div
              class="initials"
              style="width: 100px; height: 100px; font-size: 41.66666666666667px;"
            >
              <span
                style="line-height: 102px;"
              >
                AP
              </span>
            </div>
            <img
              alt="avatar"
              class="gravatar"
              loading="lazy"
              src="https://config.gorgias.io/production/picture"
            />
          </div>
          <div
            class="InputField mb16 form-group"
            color=""
          >
            <div
              class=""
            >
              <div
                class="d-flex align-center"
              >
                <button
                  aria-disabled="false"
                  class="wrapper fill secondary medium"
                  type="button"
                >
                  <span>
                    Select a file
                  </span>
                </button>
                <input
                  class="input mb16 form-control-file"
                  id="id-input-9"
                  type="file"
                />
              </div>
            </div>
          </div>
          <small
            class="form-text text-muted"
          >
            The picture must be square and weigh less than 500kB.
          </small>
          <a
            class="text-danger"
            href="#"
          >
            Remove Picture
          </a>
        </div>
      </div>
      <div
        class="contentWrapper"
      >
        <div
          class="headingSection"
        >
          Account preferences
        </div>
        <div
          class="section"
        >
          <div
            class="headingSubsection"
          >
            Theme
          </div>
          <div
            class="section"
          >
            <div
              class="themeListWrapper"
            >
              <div
                aria-checked="false"
                aria-label="[object Object]"
                class="wrapper previewRadioButtonWrapper"
                role="radio"
                tabindex="0"
              >
                <div>
                  <label
                    class="label label"
                    for="system"
                  >
                    <input
                      class="input"
                      hidden=""
                      id="system"
                      tabindex="-1"
                      type="radio"
                    />
                    <span
                      class="wrapper"
                    >
                      <i
                        class="material-icons icon isLeft buttonIconWrapper medium"
                      >
                        computer
                      </i>
                      System
                    </span>
                  </label>
                </div>
              </div>
              <div
                aria-checked="true"
                aria-label="[object Object]"
                class="wrapper selected previewRadioButtonWrapper"
                role="radio"
                tabindex="0"
              >
                <div>
                  <label
                    class="label label"
                    for="dark"
                  >
                    <input
                      checked=""
                      class="input"
                      hidden=""
                      id="dark"
                      tabindex="-1"
                      type="radio"
                    />
                    <span
                      class="wrapper"
                    >
                      <i
                        class="material-icons icon isLeft buttonIconWrapperSelected medium"
                      >
                        dark_mode
                      </i>
                      Dark
                    </span>
                  </label>
                </div>
              </div>
              <div
                aria-checked="false"
                aria-label="[object Object]"
                class="wrapper previewRadioButtonWrapper"
                role="radio"
                tabindex="0"
              >
                <div>
                  <label
                    class="label label"
                    for="light"
                  >
                    <input
                      class="input"
                      hidden=""
                      id="light"
                      tabindex="-1"
                      type="radio"
                    />
                    <span
                      class="wrapper"
                    >
                      <i
                        class="material-icons icon isLeft buttonIconWrapper medium"
                      >
                        brightness_high
                      </i>
                      Light
                    </span>
                  </label>
                </div>
              </div>
              <div
                aria-checked="false"
                aria-label="[object Object]"
                class="wrapper previewRadioButtonWrapper"
                role="radio"
                tabindex="0"
              >
                <div>
                  <label
                    class="label label"
                    for="modern light"
                  >
                    <input
                      class="input"
                      hidden=""
                      id="modern light"
                      tabindex="-1"
                      type="radio"
                    />
                    <span
                      class="wrapper"
                    >
                      <i
                        class="material-icons icon isLeft buttonIconWrapper medium"
                      >
                        brightness_6
                      </i>
                      Classic
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="headingSubsection"
          >
            Macro display
          </div>
          <div
            class="subsection"
          >
            <div
              class="inputField body-regular form-group"
            >
              <span
                class="inputField group vertical"
              >
                <div>
                  <label
                    class="label label"
                    for="prefill_best_macro"
                    role="switch"
                  >
                    <input
                      class="input"
                      disabled=""
                      id="prefill_best_macro"
                      name="prefill_best_macro"
                      type="checkbox"
                    />
                    <div
                      class="slider"
                    />
                    <i
                      class="material-icons AIIcon"
                    >
                      auto_awesome
                    </i>
                    AI Macro prediction
                  </label>
                </div>
                <small
                  class="macroDescription form-text text-muted"
                >
                  Automatically select macros based on ticket content.
                   
                  <a
                    href="https://docs.gorgias.com/en-US/macros-81846#:~:text=will%20be%20easier.-,Additional%20features,-Still%20not%20fast"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more
                  </a>
                </small>
              </span>
              <span
                class="inputField group vertical"
              >
                <div>
                  <label
                    aria-checked="true"
                    class="label label"
                    for="show_macros_suggestions"
                    role="switch"
                  >
                    <input
                      checked=""
                      class="input"
                      disabled=""
                      id="show_macros_suggestions"
                      name="show_macros_suggestions"
                      type="checkbox"
                    />
                    <div
                      class="slider"
                    />
                    <i
                      class="material-icons AIIcon"
                    >
                      auto_awesome
                    </i>
                    AI Macro suggestions
                  </label>
                </div>
                <small
                  class="macroDescription form-text text-muted"
                >
                  Display suggested macros that can be applied to tickets with one click.
                   
                  <a
                    href="https://docs.gorgias.com/en-US/macros-81846#:~:text=will%20be%20easier.-,Additional%20features,-Still%20not%20fast"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more
                  </a>
                </small>
              </span>
              <span
                class="inputField group vertical"
              >
                <div>
                  <label
                    class="label label"
                    for="show_macros"
                    role="switch"
                  >
                    <input
                      class="input"
                      disabled=""
                      id="show_macros"
                      name="show_macros"
                      type="checkbox"
                    />
                    <div
                      class="slider"
                    />
                    Display macro search view by default
                  </label>
                </div>
                <small
                  class="macroDescription form-text text-muted"
                >
                  Always display the macro search view when responding to incoming emails.
                   
                  <a
                    href="https://docs.gorgias.com/en-US/macros-81846#:~:text=will%20be%20easier.-,Additional%20features,-Still%20not%20fast"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more
                  </a>
                </small>
              </span>
            </div>
          </div>
          <div
            class="inputField mb40 form-group"
          >
            <div
              class="headingSubsection"
            >
              Forward calls to an external number
            </div>
            <p
              class="body-regular"
            >
              When you are routed a call in Gorgias, forward the call to a mobile device or landline.
            </p>
            <div
              class="inputField subsection"
            >
              <label
                aria-checked="false"
                class="label label"
                for="forward_calls"
                role="switch"
              >
                <input
                  class="input"
                  disabled=""
                  id="forward_calls"
                  name="forward_calls"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                Enable call forwarding
              </label>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-disabled="false"
        class="wrapper fill primary medium"
        type="submit"
      >
        <span>
          Save Changes
        </span>
      </button>
    </form>
  </div>
</div>
`;
